--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,5 +28,24 @@
                       android:layout_gravity="bottom"
             />
         </FrameLayout>
+
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:textSize="32sp"
+                  android:text="$735"
+                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                  android:layout_marginRight="@dimen/activity_vertical_margin"
+                  android:layout_marginBottom="8dp"
+                  android:layout_marginTop="@dimen/activity_vertical_margin"
+                  android:textColor="@android:color/black"
+        />
+
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:text="@string/content_text"
+                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                  android:layout_marginRight="@dimen/activity_horizontal_margin"
+                  android:layout_marginBottom="@dimen/activity_vertical_margin"
+                  android:lineSpacingMultiplier="1"
+                  android:textColor="@android:color/black"
+        />
     </LinearLayout>
 </ScrollView>
