Penambahan ViewGroup, RelativeLayout dan Button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -131,5 +131,42 @@
             </TableRow>
 
         </TableLayout>
+
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:text="Dijual Oleh"
+                  android:textSize="12sp"
+                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                  android:layout_marginRight="@dimen/activity_horizontal_margin"
+                  android:layout_marginBottom="8dp"
+        />
+
+        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        >
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:src="@drawable/images"
+                android:layout_centerVertical="true"
+                android:id="@+id/profile_image"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                />
+
+            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                      android:layout_toRightOf="@+id/profile_image"
+                      android:text="Didik Abdul Mukmin"
+                      android:textColor="@android:color/black"
+                      android:layout_centerVertical="true"
+            />
+        </RelativeLayout>
+
+        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:text="Beli"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+        />
     </LinearLayout>
 </ScrollView>
