--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,172 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
-            tools:context=".MainActivity">
-    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+            android:background="@android:color/white">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
-            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
-                       android:adjustViewBounds="true"
-                       android:src="@drawable/pixel_google"
-                       android:scaleType="fitXY"
-            />
-            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
-                      android:padding="8dp"
-                      android:text="6 Photos"
-                      android:gravity="center_vertical"
-                      android:drawableLeft="@drawable/ic_collections_white_18dp"
-                      android:drawablePadding="4dp"
-                      android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                      android:background="#4D000000"
-                      android:textColor="@android:color/white"
-                      android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                      android:layout_marginBottom="@dimen/activity_vertical_margin"
-                      android:layout_gravity="bottom"
-            />
+
+        <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/pixel_google" />
+
+            <TextView
+                    style="@style/TextContent.Small.White"
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:background="#4D000000"
+                    android:drawableLeft="@drawable/ic_collections_white_18dp"
+                    android:drawablePadding="4dp"
+                    android:gravity="center_vertical"
+                    android:padding="8dp"
+                    android:text="@string/dummy_photos"
+                    android:textColor="@android:color/white" />
         </FrameLayout>
 
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:textSize="32sp"
-                  android:text="$735"
-                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                  android:layout_marginRight="@dimen/activity_vertical_margin"
-                  android:layout_marginBottom="8dp"
-                  android:layout_marginTop="@dimen/activity_vertical_margin"
-                  android:textColor="@android:color/black"
-        />
+        <TextView
+                style="@style/TextContent.Black"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="8dp"
+                android:text="@string/dummy_value"
+                android:textSize="32sp" />
 
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:text="@string/content_text"
-                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                  android:layout_marginRight="@dimen/activity_horizontal_margin"
-                  android:layout_marginBottom="@dimen/activity_vertical_margin"
-                  android:lineSpacingMultiplier="1"
-                  android:textColor="@android:color/black"
-        />
+        <TextView
+                style="@style/TextContent.Subtitle"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:text="@string/stock" />
 
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:text="Spesifikasi"
-                  android:textSize="12sp"
-                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                  android:layout_marginRight="@dimen/activity_horizontal_margin"
-                  android:layout_marginBottom="8dp"
-        />
+        <TextView
+                style="@style/TextContent"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:lineSpacingMultiplier="1"
+                android:text="@string/content_text"
+                android:textColor="@android:color/black" />
 
-        <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                     android:layout_marginRight="@dimen/activity_horizontal_margin"
-                     android:layout_marginBottom="@dimen/activity_vertical_margin"
-        >
-            <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-            >
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
-                        android:text="Display"
-                />
+        <TextView
+                style="@style/TextContent.Subtitle"
+                android:layout_marginBottom="8dp"
+                android:text="@string/specification" />
 
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_weight="1"
-                        android:text="@string/content_specs_display"
-                        android:textColor="@android:color/black"
-                />
-            </TableRow>
-
-            <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-            >
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
-                        android:text="Size"
-                />
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_weight="1"
-                        android:text="@string/content_specs_size"
-                        android:textColor="@android:color/black"
-                />
-            </TableRow>
-
-            <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-            >
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_marginRight="@dimen/activity_vertical_margin"
-                        android:text="Battery"
-                />
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:layout_weight="1"
-                        android:text="@string/content_specs_battery"
-                        android:textColor="@android:color/black"
-                />
-            </TableRow>
-
-        </TableLayout>
-
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                  android:text="Dijual Oleh"
-                  android:textSize="12sp"
-                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                  android:layout_marginRight="@dimen/activity_horizontal_margin"
-                  android:layout_marginBottom="8dp"
-        />
-
-        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"
-                        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        >
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:src="@drawable/images"
-                android:layout_centerVertical="true"
-                android:id="@+id/profile_image"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                />
-
-            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
-                      android:layout_toRightOf="@+id/profile_image"
-                      android:text="Didik Abdul Mukmin"
-                      android:textColor="@android:color/black"
-                      android:layout_centerVertical="true"
-            />
-        </RelativeLayout>
-
-        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
-                android:text="Beli"
+        <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-        />
+                android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+
+                <TextView
+                        style="@style/TextSpec.Field"
+                        android:text="@string/display" />
+
+                <TextView
+                        style="@style/TextSpec.Value"
+                        android:text="@string/content_specs_display" />
+            </TableRow>
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+
+                <TextView
+                        style="@style/TextSpec.Field"
+                        android:text="@string/size" />
+
+                <TextView
+                        style="@style/TextSpec.Value"
+                        android:text="@string/content_specs_size" />
+            </TableRow>
+
+            <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp">
+
+                <TextView
+                        style="@style/TextSpec.Field"
+                        android:text="@string/battery" />
+
+                <TextView
+                        style="@style/TextSpec.Value"
+                        android:text="@string/content_specs_battery" />
+            </TableRow>
+        </TableLayout>
+
+        <TextView
+                style="@style/TextContent.Subtitle"
+                android:layout_marginBottom="8dp"
+                android:text="@string/seller" />
+
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="56dp"
+                    android:layout_height="56dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:src="@drawable/images" />
+
+            <TextView
+                    style="@style/TextContent"
+                    android:layout_toEndOf="@+id/profile_image"
+                    android:layout_toRightOf="@id/profile_image"
+                    android:text="@string/my_name"
+                    android:textColor="@android:color/black" />
+        </RelativeLayout>
+
+        <Button
+                android:text="@string/buy"
+                style="@style/ButtonGeneral"/>
     </LinearLayout>
 </ScrollView>
